[package]
name = "async-periodic-job"
version = "0.1.2"
edition = "2024"
authors = ["Steve Zhang <stevzhang01@gmail.com>"]
license = "MIT"
description = "A simple async periodic job scheduler library base on tokio-util."
repository = "https://github.com/imstevez/async-periodic-job"
keywords = ["cron", "shedule", "periodic", "job", "task"]
categories = []
readme = "./README.md"
documentation = "https://docs.rs/async-periodic-job"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }